--- a/css/stepmod.css
+++ b/css/stepmod.css
@@ -43,9 +43,10 @@ h5           { 	font-family: Verdana, Arial, Helvetica;
 
 h6           { 	font-family: Verdana, Arial, Helvetica; 
 		font-weight: normal; 
-		font-style: normal; 
+		font-style: normal; }
 
 ul           { list-style-image: url('ablbull1.gif') }
 ul ul        { list-style-image: url('ablbull2.gif') }
 ul ul ul     { list-style-image: url('ablbull3.gif') }
+
 
