No longer used fixed size fonts

--- a/css/stepmod.css
+++ b/css/stepmod.css
@@ -7,39 +7,32 @@ h6           { color: rgb(51, 0, 153) }
 
 body         { 	font-family: Verdana, Arial, Helvetica;
 		font-weight: normal; 
-		font-style: normal; 
-        	font-size: 9pt }
+		font-style: normal }
 
 code         { 	font-family: Courier;
 		font-weight: normal; 
-		font-style: normal; 
-        	font-size: 10pt }
+		font-style: normal }
 
 
 h1           { 	font-family: Verdana, Arial, Helvetica; 
 		font-weight: normal; 
-		font-style: normal; 
-               	font-size: 24pt }
+		font-style: normal }
 
 h2           { 	font-family: Verdana, Arial, Helvetica; 
 		font-weight: normal; 
-		font-style: normal; 
-               	font-size: 18pt }
+		font-style: normal }
 
 h3           { 	font-family: Verdana, Arial, Helvetica; 
 		font-weight: normal; 
-		font-style: normal; 
-               	font-size: 14pt }
+		font-style: normal }
 
 h4           {  font-family: Verdana, Arial, Helvetica; 
 		font-weight: normal; 
-		font-style: normal; 
-               	font-size: 12pt }
+		font-style: normal }
 
 h5           { 	font-family: Verdana, Arial, Helvetica; 
 		font-weight: normal; 
-		font-style: normal; 
-               	font-size: 10pt }
+		font-style: normal }
 
 h6           { 	font-family: Verdana, Arial, Helvetica; 
 		font-weight: normal; 
