--- a/css/stepmod.css
+++ b/css/stepmod.css
@@ -43,3 +43,5 @@ ul ul        { list-style-image: url('ablbull2.gif') }
 ul ul ul     { list-style-image: url('ablbull3.gif') }
 
 
+li	     { margin-top: 0.5em; margin-bottom: 0.5em; }
+
