--- a/nav/css/nav.css
+++ b/nav/css/nav.css
@@ -1,9 +1,95 @@
+h1           { color: rgb(51, 0, 153) }
+h2           { color: rgb(51, 0, 153) }
+h3           { color: rgb(51, 0, 153) }
+h4           { color: rgb(51, 0, 153) }
+h5           { color: rgb(51, 0, 153) }
+h6           { color: rgb(51, 0, 153) }
+
+body         { 	font-family: Verdana, Arial, Helvetica;
+		font-weight: normal; 
+		font-style: normal }
+
+code         { 	font-family: Courier;
+		font-weight: normal; 
+		font-style: normal }
+
+
+h1           { 	font-family: Verdana, Arial, Helvetica; 
+		font-weight: normal; 
+		font-style: normal }
+
+h2           { 	font-family: Verdana, Arial, Helvetica; 
+		font-weight: normal; 
+		font-style: normal }
+
+h3           { 	font-family: Verdana, Arial, Helvetica; 
+		font-weight: normal; 
+		font-style: normal }
+
+h4           {  font-family: Verdana, Arial, Helvetica; 
+		font-weight: normal; 
+		font-style: normal }
+
+h5           { 	font-family: Verdana, Arial, Helvetica; 
+		font-weight: normal; 
+		font-style: normal }
+
+h6           { 	font-family: Verdana, Arial, Helvetica; 
+		font-weight: normal; 
+		font-style: normal; }
+
+p.bannertitle   {
+		font-family: Verdana, Arial, Helvetica; 
+		font-weight: bold; 
+		font-style: normal;
+		font-size: 0.9em;
+		margin-top: 0em; margin-bottom: 0em;
+		}
+
+
+p.bannertitleitem   {
+		font-family: Verdana, Arial, Helvetica; 
+		font-weight: normal; 
+		font-style: normal; 
+		font-size: 0.6em;
+		margin-top: 1em; margin-bottom: 0em;
+		}
+
+
+p.bannermenu   {
+		font-family: Verdana, Arial, Helvetica; 
+		font-weight: bold;
+		font-style: normal;
+		font-size: 0.8em;
+		margin-top: 0em; margin-bottom: 0em;
+		background: silver;
+		}
+
+p.bannermenuitem   {
+		font-family: Verdana, Arial, Helvetica; 
+		font-weight: normal; 
+		font-style: normal; 
+		font-size: 0.6em;
+		margin-left: 2em;
+		margin-top: -0.05em; margin-bottom: 0.05em;
+		}
+
+div.bannerbackground {
+    		background: rgb(204,204,255);
+		padding: 0em;
+		border-bottom: solid;	
+		border-left-width: thin;
+		border-color: navy;
+  }
+
+
+
 p.alpha      {
 		font-family: Verdana, Arial, Helvetica; 
 		font-weight: bold; 
 		font-style: normal;
 		font-size: 0.9em;
-		margin-top: 1em; margin-bottom: 0em;
+		margin-top: 0em; margin-bottom: 0em;
 		}
 
 
