--- a/nav/css/nav.css
+++ b/nav/css/nav.css
@@ -82,7 +82,16 @@ div.bannerbackground {
 		border-color: navy;
   }
 
-
+div.DIVtitletext {
+		font-family: Verdana, Arial, Helvetica; 
+		font-weight: bold; 
+		font-style: normal;
+		font-size: 0.7em;
+		margin-top: -24;
+		margin-left: 30;
+		border-bottom: solid;	
+		border-color: navy;
+  }
 
 p.alpha      {
 		font-family: Verdana, Arial, Helvetica; 
@@ -111,3 +120,7 @@ p.menuitem      {
 		margin-left: 2em;
 		margin-top: -0.05em; margin-bottom: 0.05em;
 		}
+
+.nodeheader {font-size: 0.6em;}
+.nodedocuments { border-style: none}
+body {font-family: Tahoma}
