--- a/nav/css/developer.css
+++ b/nav/css/developer.css
@@ -74,3 +74,12 @@ p.attrhref	{
 		margin-top: 0.1em; margin-bottom: 1em;
 		margin-left: 5em;
 	}
+
+div.toc   {
+		font-family: Verdana, Arial, Helvetica; 
+		font-weight: normal;
+		font-style: normal;
+		font-size: 0.8em;
+		margin-top: 0em; margin-bottom: 0em;
+		background: #FFFFCC;
+		}
