--- a/nav/css/nav.css
+++ b/nav/css/nav.css
@@ -124,3 +124,13 @@ p.menuitem      {
 .nodeheader {font-size: 0.6em;}
 .nodedocuments { border-style: none}
 body {font-family: Tahoma}
+
+
+div.toc   {
+		font-family: Verdana, Arial, Helvetica; 
+		font-weight: normal;
+		font-style: normal;
+		font-size: 0.8em;
+		margin-top: 0em; margin-bottom: 0em;
+		background: #FFFFCC;
+		}
