Added dictionary view

--- a/nav/css/developer.css
+++ b/nav/css/developer.css
@@ -83,3 +83,23 @@ div.toc   {
 		margin-top: 0em; margin-bottom: 0em;
 		background: #FFFFCC;
 		}
+
+p.dictionary {
+		font-family: Verdana, Arial, Helvetica; 
+		font-weight: bold;
+		font-style: normal;
+		margin-bottom: 0em;
+		padding-left: 2em;	
+}
+
+div.dictionary_description {
+		font-family: Verdana, Arial, Helvetica; 
+		font-weight: normal;
+		font-style: normal;
+		margin-left: 4em;
+		padding-left: 1em;
+    		border: dashed;
+	    	border-width: 0.1em;;
+    		border-color: silver;		
+
+}
