Now display issue XML template

--- a/nav/css/developer.css
+++ b/nav/css/developer.css
@@ -99,7 +99,27 @@ div.dictionary_description {
 		margin-left: 4em;
 		padding-left: 1em;
     		border: dashed;
-	    	border-width: 0.1em;;
-    		border-color: silver;		
+	    	border-width: 0.1em;
+    		border-color: silver;
+}	
 
-}
+p.issuetitle	{
+		font-family: Verdana, Arial, Helvetica; 
+		font-weight: bold; 
+		font-size: 1.0em;
+		font-style: normal; 
+		margin-top: 0.9em; 
+		margin-bottom: 0.1em;
+	}
+	
+
+
+p.xml	{
+		font-family: Courier; 
+		font-weight: normal; 
+		font-size: 0.8em;
+		font-style: normal; 
+		margin-top: 0.5em; 
+		margin-bottom: 0.1em;
+	}
+
